# jinbocho-auth-v1

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
app/: config.py  main.py
app/api/: __init__.py  dependencies.py
app/core/: __init__.py  error_tracking.py  exception_handlers.py  lifespan.py  openapi_config.py
app/domain/: exceptions.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_reading_goal.py  0003_add_password_reset_tokens.py  0004_add_user_language.py  0005_add_user_theme.py  0006_add_password_reset_token_purpose.py  0007_add_user_password_set_at.py  0008_add_user_avatar_url.py  0009_add_user_consent_fields.py  0010_rename_family_to_library.py  0011_add_library_memberships.py  0012_add_email_change_tokens.py  0013_add_user_tour_completed_at.py  0014_add_library_kids_mode.py  0015_add_user_guardian_email.py  0016_add_user_birth_year.py  0017_partial_unique_email_active.py
tests/integration/: conftest.py  test_auth_endpoints.py  test_email_change.py  test_family_management.py  test_kids_mode.py  test_library_management.py  test_password_reset.py  test_user_management.py
tests/unit/: conftest.py  test_auth_use_cases.py  test_backup.py  test_delete_family.py  test_delete_library.py  test_email_change.py  test_invite_and_reset.py  test_last_admin_protection.py  test_loan_reminder_notification.py  test_membership_use_cases.py  test_resend_invite.py  test_revoke_family_sessions.py  test_revoke_library_sessions.py  test_search_users.py  test_update_tour_status_use_case.py
(+201 files in other folders)
